Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodifyapi-service
spec:
  selector:
    app: moodifyapi
  ports:
    - protocol: TCP
      port: 5109
      targetPort: 5109
  type: NodePort
